[package]
name = "vulkan-tutorial"
version = "0.1.0"
authors = ["Mihai Costea"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.2"
vulkano = "0.19"
vulkano-shaders = "0.19"
nalgebra = "0.22"
num-traits = "0.2"
obj-rs = "0.6.2"